bin/istio-cr-nginx.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: test-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-service
spec:
  hosts:
  - "ab63af44d8a9047d6ac7acc96172a230-375578970.us-east-1.elb.amazonaws.com"
  gateways:
  - test-gateway.servicemesh.svc.cluster.local
  http:
  - route:
    - destination:
        host: my-nginx-service
        port:
          number: 80
